--- a/samples/it_v1/templates/ipam.pug
+++ b/samples/it_v1/templates/ipam.pug
@@ -42,7 +42,7 @@ if dhcpRanges.length > 0
 				td=rng.from
 				td=rng.to
 if ipNodes.length > 0
-	h3 Fixed IPs
+	h3 Static IPs
 	table 
 		thead 
 			th IP
