--- a/samples/it_v1/templates/todos.pug
+++ b/samples/it_v1/templates/todos.pug
@@ -17,7 +17,7 @@ div#HEADFILES
 				itm.data.todo.forEach((todo) => {
 					const nodeItem = {
 						name: itm.data.name,
-						url: curNode.url + '?itm=' + itm.data.name,
+						url: curNode.url + '?itm=' + itm.name,
 						todo: todo,
 					}
 					todos.push(nodeItem)
@@ -41,7 +41,7 @@ div#HEADFILES
 			if(itm?.data?.todo?.length > 0) {
 				const nodeItem = {
 					name: itm.data.name,
-					url: curNode.url + '?itm=' + itm.data.name,
+					url: curNode.url + '?itm=' + itm.name,
 					todos: itm.data.todo,
 				}
 				todos.push(nodeItem)
@@ -54,7 +54,7 @@ div#HEADFILES
 
 	readNode(doc)
 	todos = todos.sort((x, y) => {
-		return (x.todo.priority - y.todo.priority)
+		return (y.todo.priority - x.todo.priority)
 	})
 
 table
@@ -63,11 +63,18 @@ table
 		th Object
 		th Message
 	each itm in todos
-		tr
-			td=itm.todo.priority
-			td
-				a(href=itm.url)=itm.name
-			td=itm.todo.msg
+		if itm.todo.priority >= 10
+			tr.alert
+				td=itm.todo.priority
+				td
+					a.alert(href=itm.url)=itm.name
+				td=itm.todo.msg
+		else
+			tr
+				td=itm.todo.priority
+				td
+					a(href=itm.url)=itm.name
+				td=itm.todo.msg
 
 div#FILES
 div#FOOTFILES
