--- a/samples/it_v1/templates/updates.pug
+++ b/samples/it_v1/templates/updates.pug
@@ -13,7 +13,7 @@ div#HEADFILES
 			if(itm?.data?.updates?.length > 0) {
 				const nodeItem = {
 					name: itm.data.name,
-					url: curNode.url + '?itm=' + itm.data.name,
+					url: curNode.url + '?itm=' + itm.name,
 					updates: itm.data.updates,
 				}
 				updates.push(nodeItem)
