Use title for nodes todo

--- a/samples/it_v2/templates/todos.pug
+++ b/samples/it_v2/templates/todos.pug
@@ -5,7 +5,7 @@ div#HEADFILES
 		if(curNode?.todo?.length > 0) {
 			curNode.todo.forEach((itm) => {
 				const nodeItem = {
-					name: curNode.name,
+					name: curNode.title,
 					url: curNode.url,
 					todo: itm,
 				}
